[frontend] alignement issue in OCR toggle fixes #8

--- a/frontend/src/scss/profession.scss
+++ b/frontend/src/scss/profession.scss
@@ -24,6 +24,9 @@
       margin: auto 0;
       width: 45px;
     }
+    .left-label {
+      margin-bottom: 0px;
+    }
   }
 }
 .metadata-sidebar {
